# thegent-cache

./: .env.example  AGENTS.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  README.md  SECURITY.md  SPEC.md  TEST_COVERAGE_MATRIX.md  clippy.toml  nextest.toml  pyproject.toml  ruff.toml
.agileplus/: worklog.md
.github/workflows/: ci.yml  pages-deploy.yml
benches/: cache.rs
docs/: index.md
docs/.vitepress/: config.mts
docs/journeys/: index.md  quick-start.md
docs/stories/: hello-world.md  index.md
docs/traceability/: index.md
kitty-specs/001-cache-layer/: implementation.md  plan.md  spec.md
src/: lib.rs  main.rs
src/adapters/: mod.rs
src/adapters/inmemory/: mod.rs
src/adapters/persistent/: mod.rs
src/application/: mod.rs
src/application/commands/: mod.rs
src/application/queries/: mod.rs
src/application/use_cases/: mod.rs
src/domain/: mod.rs
src/domain/entities/: mod.rs
src/domain/events/: mod.rs
src/domain/value_objects/: mod.rs
src/ports/: mod.rs
src/ports/driven/: mod.rs
src/ports/driving/: mod.rs
tests/: integration.rs
