[package]
name = "thegent-cache-rs"
version = "0.1.0"
edition = "2021"
description = "Advanced two-tier caching layer backed by phenotype-cache-adapter"

[lib]
name = "thegent_cache"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
simd-json = { version = "0.14.3", features = ["serde"] }
lru = "0.10.1"
dashmap = "7.0.0-rc2"
parking_lot = "0.12.3"
moka = { version = "0.12.10", optional = true, features = ["sync", "future"] }
scc = { version = "2.3.6", optional = true }
pyo3 = { version = "0.24.1", optional = true, features = ["abi3-py312", "extension-module"] }

[features]
default = []
python = ["pyo3"]
