[package]
name = "thegent-cache-rs"
version = "0.2.0"
edition = "2021"
description = "Multi-tier caching library for agent orchestration with Hexagonal Architecture"
license = "MIT"
authors = ["Koosha Pari <kooshapari@kooshapari.com>"]
repository = "https://github.com/KooshaPari/thegent-cache"
keywords = ["cache", "multi-tier", "caching", "lru", "ttl", "singleflight"]
categories = ["caching", "concurrency"]
readme = "README.md"
documentation = "https://docs.rs/thegent-cache-rs"
rust-version = "1.70"

[lib]
name = "thegent_cache"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "thegent-cache"
path = "src/main.rs"

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lru = "0.10"
dashmap = "5.5"
parking_lot = "0.12"
clap = { version = "4.5", features = ["derive"] }
pyo3 = { version = "0.24", optional = true, features = ["abi3-py312", "extension-module"] }

[dev-dependencies]
proptest = "1.5"
cargo-mutants = "25"

[features]
default = []
python = ["pyo3"]
