[package]
name = "FacetRs"
version = "0.2.0"
edition = "2021"
description = "Multi-tier caching library for agent orchestration with Hexagonal Architecture"
license = "MIT"
authors = ["Koosha Pari <kooshapari@kooshapari.com>"]
repository = "https://github.com/phenotype-dev/thegent-cache"
keywords = ["cache", "multi-tier", "caching", "lru", "ttl", "singleflight"]
readme = "README.md"
documentation = "https://docs.rs/FacetRs"
rust-version = "1.75"

[lib]
name = "thegent_cache"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "thegent-cache"
path = "src/main.rs"

[dependencies]
# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Data structures
lru = "0.12"
dashmap = "6"
parking_lot = "0.12"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Python bindings (optional)
pyo3 = { version = "0.24", optional = true, features = ["abi3-py312", "extension-module"] }

[dev-dependencies]
proptest = "1.4"
tokio = { version = "1", features = ["full"] }

[features]
default = []
python = ["pyo3"]
